<resources>
    <string name="app_name">Brash</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário</string>
    <string name="text_view_teste"> Teste de textView</string>
    <string name="idioma">Idioma</string>
    <string name="idioma_pt">Português</string>
    <string name="idioma_en">English</string>

    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirmar_exclusao">Confirmar Exclusão</string>
    <string name="excluir">Excluir</string>
    <string name="email">Email</string>
    <string name="username_display">@%s</string>
    <!-- -->
    <!-- -->
    <!-- -->
    <!-- -->
    <string name="nuc_name">Núcleo</string>
    <string name="nuc_entrar">Entrar</string>
    <string name="nuc_criar_usuario">Criar usuário</string>
    <string name="nuc_esqueceu_senha">Esqueceu a senha?</string>
    <string name="nuc_msg_default_erro_login">Usuário e/ou senha incorretos, digite novamente.</string>
    <string name="nuc_cadastrar_titulo">Cadastrar</string>
    <string name="nuc_nome_de_usuario">Nome de Usuário</string>
    <string name="nuc_nome_de_exibicao">Nome Exibição</string>
    <string name="nuc_email">Email</string>
    <string name="nuc_senha">Senha</string>
    <string name="nuc_criar_conta">Criar Conta</string>
    <string name="nuc_msg_default_erro_cadastro">O nome de usuário ou email já existem.</string>
    <string name="nuc_mesagem_confirmacao_envio_email">Um código de verificação foi enviado para o seu email</string>
    <string name="nuc_codigo">Código de verificação</string>
    <string name="nuc_msg_confirmacao_criacao_conta_default">Sua conta foi criada com sucesso, faça a verificação em seu email para concluir o cadastro.</string>
    <string name="nuc_fazer_login">Fazer Login</string>
    <string name="nuc_preencha_todos_campos">Preencha todos os campos!</string>
    <string name="nuc_digite_email_valido">Digite um email válido!</string>
    <string name="nuc_msg_erro_envio_email">Ocorreu algum erro ao tentar enviar o código para o email.</string>
    <string name="nuc_msg_erro_usuario_nao_existe">Este usuário não existe.</string>
    <string name="nuc_msg_erro_usario_ou_senha_incorretos">Usuário ou senha incorretos.</string>
    <string name="nuc_msg_erro_falha_conectar_internet">Falha ao conectar com a internet.</string>
    <string name="nuc_msg_erro_login_default">Houve algum problema no login, tente novamente</string>
    <string name="nuc_msg_erro_acesso_banco_dados">Não foi possível acessar o servidor de banco de dados, tente mais tarde.</string>
    <string name="nuc_msg_erro_senha_fraca">Sua senha deve conter pelo menos 6 dígitos!</string>
    <string name="nuc_msg_erro_email_ja_cadastrado">Este e-mail já está cadastrado!</string>
    <string name="nuc_msg_erro_nome_usuario_ja_cadastrado">Este nome de usuário já está cadastrado!</string>
    <string name="nuc_msg_erro_codigo_invalido">Código inválido!</string>
    <string name="nuc_msg_erro_conta_nao_verificada">Confirme primeiro sua conta no email!</string>
    <string name="nuc_enviar_codigo">Enviar código</string>
    <string name="nuc_alterar_senha">alterar senha</string>
    <string name="nuc_email_alterar_senha">Um link para redefinição foi enviado para o seu email</string>

    <string-array name="nuc_home_spinner_ordenar">
        <item>Ordem Alfanumérica</item>
        <item>Número de Cartões</item>
        <item>Não Ordenar</item>
    </string-array>
    <string-array name="nuc_home_spinner_filtrar">
        <item>Todos</item>
        <item>Nome Do Baralho</item>
        <item>Nome Da Pasta</item>
        <item>Baralhos Públicos</item>
        <item>Áreas do Conhecimento</item>
        <item>Áreas Específicas</item>
    </string-array>
    <!-- -->
    <!-- -->
    <!-- -->
    <!-- -->
    <string name="gtc_name">Gestão de conteúdo</string>
    <string name="gtc_criar_baralho">Criar Baralho</string>
    <string name="gtc_criar_pasta">Criar Pasta</string>
    <string name="gtc_procurar_baralhos_publicos">Procurar Baralhos Públicos</string>
    <string name="gtc_nome_baralho">Nome do Baralho</string>
    <string name="gtc_cartoes_novos">Cartões Novos:</string>
    <string name="gtc_cartoes_a_revisar">Cartões a Revisar:</string>
    <string name="gtc_cartoes_esquecidos">Cartões Esquecidos:</string>
    <string name="gtc_zero">0</string>
    <string name="gtc_iniciar_revisao">Iniciar revisão</string>
    <string name="gtc_nao_foi_possivel_criar_baralho">Não foi possível criar o baralho!</string>
    <string name="gtc_nao_foi_possivel_criar_pasta">Não foi possível criar a pasta!</string>

    <!-- -->
    <!-- -->
    <!-- -->
    <!-- -->
    <string name="gtaa_name">Gestão de auxílio de aprendizado</string>
    <string name="gtc_perfil">Perfil</string>
    <string name="gtc_pesquisar_usuarios">Pesquisar Usuários</string>
    <string name="search_bar_hint"> Pesquisar </string>
    <string name="configuracoes_de_busca">Configurações de Busca</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="filtrar_por">Filtrar por</string>
    <string name="aplicar">Aplicar</string>
    <string name="opcoes">Opções</string>
    <string name="ajustes">Ajustes</string>
    <string name="nuc_trocar_senha">Trocar Senha</string>
    <string name="nuc_trocar_email">Trocar Email</string>
    <string name="nuc_sair_da_conta">Sair da Conta</string>
    <string name="nuc_raiz">Raiz</string>
    <string name="nuc_verificar_codigo">Verificar Código</string>
    <string name="pastas">Pastas</string>
    <string name="mover">Mover</string>
    <string name="baralhos">Baralhos</string>
    <string name="importar">Importar</string>
    <string name="gtc_renomear_pasta">Renomear Pasta</string>
    <string name="gtc_excluir_pasta">Excluir Pasta</string>
    <string name="gtc_nome_da_pasta">Nome da Pasta</string>
    <string name="gtc_titulo">Título</string>
    <string name="gtc_descricao">Descricao</string>
    <string name="gtc_baralhos_publicos">Baralhos Públicos</string>
    <string name="gtc_baralho_publico">Baralho público</string>
    <string name="gtv_conteudo_de_estudo">Conteúdo de Estudo</string>
    <string name="gtc_visualizar_baralho">Visualizar Baralho</string>
    <string name="gtc_visualizar_cartoes">Visualizar Cartões</string>
    <string name="gtc_visualizar_anotacoes">Visualizar Anotações</string>
    <string name="gtc_revisar_baralho">Revisar Baralho</string>
    <string name="gtc_mover_baralho">Mover Baralho</string>
    <string name="gtc_excluir_baralho">Excluir Baralho</string>
    <string name="gtc_cartoes_novos_por_dia">Cartoes Novos por Dia</string>
    <string name="gtc_anotacoes">Anotações</string>
    <string name="gtc_nome_do_baralho">Nome do Baralho</string>
    <string name="gtc_visualizar_anotacao">Visualizar Anotação</string>
    <string name="gtc_nome_da_anotacao">Nome da Anotação</string>
    <string name="gtc_texto">Texto</string>
    <string name="gtc_pergunta">Pergunta</string>
    <string name="gtc_resposta">Resposta</string>
    <string name="gtc_visualizar_cartao">Visualizar Cartão</string>
    <string name="gtc_visualizar_dicas">Visualizar Dicas</string>
    <string name="gtc_excluir_cartao">Excluir Cartão</string>
    <string name="gtc_criar_cartao">Criar Cartão</string>
    <string name="gtc_dicas">Dicas</string>
    <string name="gtc_visualizar_dica">Visualizar Dica</string>
    <string name="gtc_excluir_dica">Excluir Dica</string>
    <string name="gtc_texto_da_dica">Texto da Dica</string>
    <string name="gtc_criar_dica">Criar Dica</string>
    <string name="gtc_parabens_revisao">Parabéns, você terminou a revisão!</string>
    <string name="gtc_volta_para_home">Volta para Home</string>
    <string name="nuc_email_email_com">email@email.com</string>
    <string name="gtc_senha_redefinida">Sua senha foi redefinida com sucesso, clique abaixo para fazer o login.</string>
    <string name="nuc_nova_senha">Nova senha</string>
    <string name="nuc_repita_a_senha">Repita a senha</string>
    <string name="nuc_redefinir_senha">Redefinir Senha</string>
    <string name="gtc_excluir_anotacao">Excluir Anotação</string>
    <string name="gtc_criar_anotacao">Criar Anotação</string>
    <string name="number_0">0</string>
    <string name="gtc_mostrar_resposta">Mostrar resposta</string>
    <string name="gtc_esqueci">Esqueci</string>
    <string name="gtc_dificil">Difícil</string>
    <string name="gtc_bom">Bom</string>
    <string name="gtc_facil">Facil</string>
    <string name="nuc_conta">Conta</string>
    <string name="nuc_definir_email">DEFINIR EMAIL</string>
    <string name="gtc_amizades">Amizades</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="gtaa_relatorio_geral">Relatório Geral</string>
    <string name="gtaa_competicao">Competição</string>
    <string name="gtc_novo_nome_do_baralho">Novo Nome do Baralho</string>
    <string name="gtc_confirmar_nome">Confirmar Nome</string>
    <string name="mostrar_dicas">Mostrar Dicas</string>
    <string name="iniciar_revisao_total">Iniciar Revisão Total</string>


    <string-array name="nuc_listar_cartao_spinner_filtrar">
        <item>Pergunta</item>
        <item>Resposta</item>
    </string-array>

    <string name="gtc_nome_unico_baralho">Digite um nome único para o baralho</string>
    <string name="gtc_numero_cartoes_maior_que_zero">Número de cartões novos deve ser maior que 0</string>
    <string name="gtc_nome_unico_pasta">Digite um nome único para a pasta</string>
    <string name="gtc_nome_unico_anotacao">Digite um nome único para a anotação</string>
    <string name="gtc_pasta_contem_baralhos">Esta pasta contém baralhos</string>


    <string name="erro_requisicao_banco_dados_firebase">Um erro ocorreu ao realizar a requisição ao banco de dados do sistema Brash.</string>
    <string name="erro_de_conexao"> Verifique sua conexão com a internet</string>
    <string name="quantidades_cartoes">Quantidade de Cartões</string>
    <string name="sem_cartoes_para_revisar">Não há cartões a serem revisados para esse baralho.</string>

</resources>