<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/HomeFrAcoesBaralho"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/borda_linear_layout"
    android:padding="16dp">


    <TextView
        android:id="@+id/HomeFrAcoesBaralhoTextViewVisualizarBaralho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_visualizar_baralho"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/HomeFrAcoesBaralhoTextViewVisualizarCartoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_visualizar_cartoes"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/HomeFrAcoesBaralhoTextViewVisualizarAnotacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_visualizar_anotacoes"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"/>


    <TextView
        android:id="@+id/HomeFrAcoesBaralhoTextViewRevisarBaralho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_revisar_baralho"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/HomeFrAcoesBaralhoTextViewMoverBaralho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_mover_baralho"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/HomeFrAcoesBaralhoTextViewExcluirBaralho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_excluir_baralho"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>