<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_black"

    >

    <TextView
        android:id="@+id/RevisaoCartaoAcTextViewNomeBaralho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/gtc_nome_baralho"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </TextView>


    <TextView
        android:id="@+id/RevisaoCartaoAcTextViewMensagemFinalRevisao"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/gtc_parabens_revisao"
        android:textColor="@color/white"

        android:layout_marginTop="80dp"

        app:layout_constraintTop_toBottomOf="@id/RevisaoCartaoAcTextViewNomeBaralho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
    </TextView>

    <Button
        android:id="@+id/RevisaoCartaoAcButtonVoltarHome"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"

        android:textColor="@color/white"
        android:backgroundTint="@color/medium_gray"
        android:text="@string/gtc_volta_para_home"

        app:layout_constraintTop_toBottomOf="@id/RevisaoCartaoAcTextViewMensagemFinalRevisao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
