<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/HomeFrVisualizarBaralho"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:background="@drawable/borda_linear_layout"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/HomeFrVisualizarBaralhoInputLayoutTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/gtc_titulo"
        android:textColorHint="@color/soft_lilac"

        app:endIconMode="clear_text"

        app:boxBackgroundColor="@color/medium_gray"
        app:boxStrokeWidth="1dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/HomeFrVisualizarBaralhoInputTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            style="@style/EditTextMaxCharNome"

            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/HomeFrVisualizarBaralhoInputLayoutDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/gtc_descricao"
        android:textColorHint="@color/soft_lilac"

        app:endIconMode="clear_text"

        app:boxBackgroundColor="@color/medium_gray"
        app:boxStrokeWidth="1dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/HomeFrVisualizarBaralhoInputDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textMultiLine"
            style="@style/EditTextMaxCharTexto"
            android:maxLines="10"
            android:ellipsize="end"
            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/HomeFrVisualizarBaralhoInputLayoutCartoesNovos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/gtc_cartoes_novos_por_dia"
        android:textColorHint="@color/soft_lilac"

        app:endIconMode="clear_text"

        app:boxBackgroundColor="@color/medium_gray"
        app:boxStrokeWidth="1dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/HomeFrVisualizarBaralhoInputCartoesNovos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/EditTextMaxCharCartoesNovos"
            android:textColor="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/HomeFrVisualizarBaralhoCheckBoxPublico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtc_baralho_publico"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/HomeFrVisualizarBaralhoButtonCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/medium_gray"
            android:clickable="true"
            android:focusable="true"
            app:cornerRadius="8dp"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:id="@+id/HomeFrVisualizarBaralhoButtonConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/medium_gray"
            android:clickable="true"
            android:focusable="true"
            app:cornerRadius="8dp"
            />
    </LinearLayout>


</LinearLayout>
